background change and slit layout change

--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -24,9 +24,10 @@
     <header class="header">
         <h1>Taylor Colten</h1>
     </header>
+    <div class="container-both">
     <section class="section">
         <p>
-            <h2>My name is Taylor Colten. I am Front-End Developer from Orange ,Tx. </h2>
+            <h2>My name is Taylor Colten. I am Freelance Front-End Developer from Orange ,Tx. </h2>
         </p>
     </section>
     <Section class="bar-graph">
@@ -51,5 +52,7 @@
                 </section>
                 
     </Section>
+    </div>
+
 </body>
 </html>
