--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -13,7 +13,7 @@
 <aside>
    <li>860.983.7552</li>
    <li>skymendesross@gmail.com</li>
-    <li>
+    <li class ="li01">
     <a href="//www.linkedin.com/in/sky-mendes-7097bb89/">LinkedIn</a>
     </li>
 </aside>
