--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -11,12 +11,20 @@
 
 <body>
   <div class="top">
-      <!--Need to put picture of my face here, having trouble with sourcing image from image file-->
-      <div><img src="./image/profilepicedit.jpg" alt="profile pic"></div>
-      <div><a href=""><h4>www.linkedin.com/in/brandon-turner-4bb919b1></h4></a></div>
-      <div><a href=""><h3>brandontheturner@gmail.com</h3></a></div>
-      <div><h3>512-635-6709</h3></div>
-      <div><h1>Brandon Turner</h1></div>
+    <!--Need to put picture of my face here, having trouble with sourcing image from image file-->
+    <div><img src="./image/profilepicedit.jpg" alt="profile pic"></div>
+    <div><a href="">
+        <h4>www.linkedin.com/in/brandon-turner-4bb919b1</h4>
+      </a></div>
+    <div><a href="">
+        <h3>brandontheturner@gmail.com</h3>
+      </a></div>
+    <div>
+      <h3>512-635-6709</h3>
+    </div>
+    <div>
+      <h1>Brandon Turner</h1>
+    </div>
   </div>
 
   <div class="middle">
@@ -30,28 +38,29 @@
   </div>
 
   <div class="right">
-      <h2>My Home Page</h2>
-      <p>My objective is to immerse myself in code, learn, understand and apply everything into a successful career.</p>
+    <h2>My Home Page</h2>
+    <p>My objective is to immerse myself in code, learn, understand and apply everything into a successful career.</p>
 
-      <p>All prior experience is in Management and Hospitality, which has taught me critical problem solving, working effectively in stressful situations and effective time management.</p>
+    <p>All prior experience is in Management and Hospitality, which has taught me critical problem solving, working
+      effectively in stressful situations and effective time management.</p>
   </div>
 
   <div class="bottom">
     <main>
-    <p>Education</p>
-    <p>Georgetown High School</p>
-    <p>Class of 2001</p>
-    <p>Texas State University</p>
-    <p>San Marcos, Texas</p>
-    <p>2003-2006,Bachelors (Incomplete)</p>
-  </main>
-    
+      <p>Education</p>
+      <p>Georgetown High School</p>
+      <p>Class of 2001</p>
+      <p>Texas State University</p>
+      <p>San Marcos, Texas</p>
+      <p>2003-2006,Bachelors (Incomplete)</p>
+    </main>
+
     <footer>
       Copyright &copy; 2018 Brandon Turner
-      </footer>
+    </footer>
   </div>
 
-  
+
 
 </body>
 
