--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -14,12 +14,11 @@
 
     <h3>Future web developer</h3>
     
-    <p>For the past four years I have worked in the fitness industry. Working in 
-        this field and helping people to achieve their personal fitness goals has 
-        brought much joy into my life. I also have a very strong passion for making 
-        art. On average I spend about three hours every day working in my home studio
-        creating paintings, drawings, sculpture and occasionally pieces of furniture. 
-        .
+    <p>bio bla bla bla <br>
+        <br>
+        <br>
+        <br> 
+        . bla bla bla
         .
         .
         .
