--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -7,18 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
 </head>
-<img src="https://avatars1.githubusercontent.com/u/43713524?s=460&v=4"> 
+<a href="//www.linkedin.com/in/sky-mendes-7097bb89/">
+    <img src="https://avatars1.githubusercontent.com/u/43713524?s=460&v=4"> 
+    </a>
 <h1>Sky Mendes</h1>
 <h3>Web Developer</h3>
 <aside>
    <li>860.983.7552</li>
    <li>skymendesross@gmail.com</li>
-    <li class ="li01">
-    <a href="//www.linkedin.com/in/sky-mendes-7097bb89/">LinkedIn</a>
+        
     </li>
 </aside>
 <body>
-<p>Objective statement</p>
+<p>Web developer looking to move forward in a new career where I can apply my knowledge of HTML, CSS and GitHub, focusing on UX/UI design.</p>
 <div>
     Experience
     <ul>
