made some changes

--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -15,13 +15,23 @@
     <h3>Future web developer</h3>
    
     <div class="box-01">
-    <p>bio bla bla bla <br>
+    <!-- <p>For the past four years I've worked in the fitness industy helping people 
+        reach their fitness goals... As for the future,
+        bio bla bla bla <br>
         <br>
         <br>
         <br> 
-        . bla bla bla
+        Ive had the pleasure of helping people in their fitness journeys for the past 
+        four year. Before working in fitness  -->
+
+        Ive worn several hats in my professional life. After college I instructed 
+        high school art for two years. Seeing that lightbulb go off in someones mind 
+        is one of the most rewarding experiences ive ever had. From this experience 
+        I fully realized my love for helping others achieve a goal and 
+        
+        for helping others and fine tuned my
         .
-        .
+        .As for the future 
         .
         
         </p>
