--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -39,7 +39,7 @@
         <br>
 
         <p>
-            Ive worn several hats in my professional life. After college I instructed 
+            <!-- Ive worn several hats in my professional life. After college I instructed 
         high school art for two years. Seeing that lightbulb go off in someones mind 
         is one of the most rewarding experiences ive ever had. From this experience 
         I fully realized my love for helping others achieve a goal and 
@@ -47,8 +47,10 @@
         for helping others and fine tuned my
         .
         .As for the future 
-        .
-        
+        . -->
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt unde numquam praesentium consequatur quas
+         inventore at libero maxime blanditiis sit repudiandae tenetur, nulla aliquid perferendis pariatur expedita 
+         voluptas amet laboriosam?
         </p>
     </section>
     
