--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -19,7 +19,7 @@
     </li>
 </aside>
 <body>
-<p>Web developer looking to move forward in a new career where I can apply my knowledge of HTML, CSS and GitHub, focusing on UX/UI design.</p>
+<p>Web developer looking to move forward in a new career where I can apply my knowledge of HTML, CSS and GitHub. I would like to primarily focus on UX/UI design.</p>
 <div>
     Experience
     <ul>
