Fixed link to resume doc

--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -14,7 +14,7 @@
             <img id="profileImage" src="https://scontent-iad3-1.cdninstagram.com/vp/7f9d631bfeb2c715f214f1d3d06a920f/5C5C2F1C/t51.2885-15/e35/34982706_253721055385740_1464052375797891072_n.jpg">
             <h1>Howdy! I'm Jonny Abowd</h1>
             <p>UX Designer and High Five Enthusiast based in Texas</p>
-            <a id="siteLink" href="../../project-1-resume/resume/index.html">Check Out My Resume</a>
+            <a id="siteLink" href="../../01week/resume/index.html">Check Out My Resume</a>
     </div>
 </body>
 </html>
