--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -17,11 +17,11 @@
 	</div>
 
 		<nav class="navbar navbar-light mx-auto position: fixed;">
-			 <a class="navbar-brand" href="bio.html">Home</a>
-<!-- 			 <a class="navbar-brand" href="#">Bio</a> -->
-			 <a class="navbar-brand" href="../web-workbook/01week/resume/index.html">Resume</a>
-			 <a class="navbar-brand" href="./photos.html">Photos</a>
-			 <a class="navbar-brand" href="#">Contact</a>
+			 <a class="navbar-brand" href="../../index.html">Home</a>
+			 <a class="navbar-brand" href="index.html">Bio</a>
+			 <a class="navbar-brand" href="../../01week/resume/index.html">Resume</a>
+			 <a class="navbar-brand" href="photos.html">Photos</a>
+			 <a class="navbar-brand" href="contact.html">Contact</a>
 		</nav>
 	</div>
 
@@ -32,9 +32,18 @@
 
 <img src="me.jpg" alt="my face" style="width:180px;height:240px;">
 <div class="position">
+
+<section>
 <p><b>Hi, I'm Neil - an aspring full-stack developer & formerly an IT operations manager.</b></p>
+</section>
+
+<section>
 <p>I never turn away from a good challenge. By focusing on the intersection of the customer, technology, and business needs, I have restored performance and increased operational efficiency in my ten years of cross-functional project management experience in the manufacturing and technology industry.</p>
+</section>
+
+<section>
 <p>Leveraging my passion for building simple yet powerful solutions, I hope to work for a variety of clientele rangining from individuals and small business owners to large enterprises.</p>
+</section>
 </div>		
 
 			<br>
