--- a/02week/bio/photos.html
+++ b/02week/bio/photos.html
@@ -11,13 +11,13 @@
 <body>
 
 		<nav class="navbar navbar-light mx-auto">
-<!-- style="background-color: #D4E6F1;"> -->
-			 <a class="navbar-brand" href="bio.html">Home</a>
+			 <a class="navbar-brand" href="index.html">Home</a>
+			 <a class="navbar-brand" href="index.html">Bio</a>
 			 <a class="navbar-brand" href="#">Resume</a>
 			 <a class="navbar-brand" href="photos.html">Photos</a>
 			 <a class="navbar-brand" href="#">Contact</a>
 		</nav>
-	</div>
+	
 
 
 <p>Food Images</p>
