--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-<header>
+ <body>
+    <div class="box">
+        <img src="./images/desktopimage.jpg.jpg" alt='' class="box-img">
     <h1>Sam Mangum-Bostick</h1>
-    <h3>Future Programmer</h3>
+    <h5>Future Programmer</h5>
         <link rel="stylesheet" href="./css/style.css">
-</header>
-
-<body>
-        <section>
-    <p>My name is Samuel Mangum-Bostick, and I am pursuing a career in programming. I attended New Mexico Military Institute and graduated with an Associates Degree of Arts. My work experience consists of being Assistant to the Chef at Texas HoneyHam Company. I am now a student at Austin Coding Academy to pursue my career goal of becoming a programmer.</p>
-        </section>
-    <aside>
-        <img src="./images/desktopimage.jpg.jpg">
-    </aside>
+<p>My name is Samuel Mangum-Bostick, and I am pursuing a career in programming. I attended New Mexico Military Institute and graduated with an Associates Degree of Arts. My work experience consists of being Assistant to the Chef at Texas HoneyHam Company. I am now a student at Austin Coding Academy to pursue my career goal of becoming a programmer.</p>
+   <p>(512) 921-6999</p>
+   <p>SamMangumBostick@gmail.com</p>
+   <p>linkedin.com/in/sammangumbostick</p>
+</div>    
 </body>
-
-<footer> 
-    <div>Phone Number: (512) 921-6999</div>
-    <div>Email: SamMangumBostick@gmail.com</div>
-    <div>Linked: linkedin.com/in/sammangumbostick</div>
-</footer>
-</html>
+ </html> 
