changed content and worked on CSS, added links

--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -8,36 +8,40 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
+
 <body>
-    <div class="ceopic">
-        <img src="/assets/km1lkypic.jpg" width="50" id="biopic">
-    </div>
-    <header>
-        <h1>Title</h1>
-        <p>Some words relating to the title</p>
-    </header>
 
     <main>
+        <div class="ceopic">
+            <a href="https://aaronaltounian.github.io/web-workbook/01week/resume/">
+                <img src="/assets/km1lkypic.jpg" id="biopic">
+            </a>
+        </div>
+
+        <div class="name">
+            <header>
+                <h1>Aaron Altounian</h1>
+                <div class="links">
+                        <a href="http://www.linkedin.com/in/aaronaltounian" class="fa fa-linkedin"></a>
+                        <a href="http://www.facebook.com/aaron.altounian" class="fa fa-facebook"></a>
+                        <a href="mailto:aaron.altounian@gmail.com" class="fa fa-envelope"></a>
+                        <a href="https://www.instagram.com/guitarmasutra/" class="fa fa-instagram"></a>
+                    </div>
+            </header>
+        </div>
+
         <section class="bio">
-            <h1>Jim Heeger</h1>
             <p>
-                    Jim has held a number of high tech senior management positions in Silicon Valley over the past twenty
-                    years. He is currently President, CEO and Chairman of PayCycle, the leader in on-line payroll for small
-                    businesses. Prior to PayCycle, Jim was SVP for the Creative Professional Business Unit at Adobe Systems,
-                    Inc. responsible for launching the Adobe Creative Suite. He joined Adobe from Fotiva, a photo
-                    management software and services company which was purchased by Adobe in December, 2001, where he
-                    was the president and CEO. He came to Fotiva via New Enterprise Associates (NEA) where he served as
-                    an executive-in-residence. Heeger had a long and successful career at Intuit, where he was most recently
-                    SVP and General Manager of Intuit’s Small Business Division. During his seven years at Intuit, he also
-                    served as CFO, SVP of operations and customer service, and VP and General Manager of the checks and
-                    forms business. Before joining Intuit, Jim held positions from product marketing engineer to distribution
-                    manager during a ten-year career at Hewlett-Packard. He earned an MBA from Stanford Graduate School
-                    of Business in 1982 and a BS in management from MIT in 1978. Jim was a Board member of Fotiva and
-                    has held Board Observer roles at Excite and MissileLock. 
+                A dedicated, self-motivated, technically proficient sound and instrument technician with experience in music retail, instrument and sound system rentals and repairs, and venue sound and lighting system management.
             </p>
         </section>
     </main>
     
+    <footer>
+        &copy; 2018 Aaron Altounian DBA Sound Guy Envy
+    </footer>
 </body>
 </html>
