--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -25,7 +25,7 @@
             <header>
                 <h1>Aaron Altounian</h1>
                 <div class="links">
-                        <a href="http://www.linkedin.com/in/aaronaltounian" class="fa fa-linkedin"></a>
+                        <a href="http://www.linkedin.com/in/aaron-altounian" class="fa fa-linkedin"></a>
                         <a href="http://www.facebook.com/aaron.altounian" class="fa fa-facebook"></a>
                         <a href="mailto:aaron.altounian@gmail.com" class="fa fa-envelope"></a>
                         <a href="https://www.instagram.com/guitarmasutra/" class="fa fa-instagram"></a>
