rekajiggered image assets

--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -17,7 +17,7 @@
     <main>
         <div class="ceopic">
             <a href="https://aaronaltounian.github.io/web-workbook/01week/resume/">
-                <img src="/assets/km1lkypic.jpg" id="biopic">
+                <img src="https://i.imgur.com/TLlbzqC.jpg" id="biopic">
             </a>
         </div>
 
