--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -38,6 +38,7 @@
         </div>
     <aside class="social">
         <ul>
+            <li> hello</li>
             <li>Twitter</li>
             <li>Facebook</li>
             <li>Instagram</li>
