--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -43,6 +43,7 @@
             <li>Facebook</li>
             <li>Instagram</li>
             <li>LinkedIn</li>
+            <li> tets </li>
         </ul>
     </aside>
     </main>
