--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -12,7 +12,9 @@
         Jim Heeger
     </header>
     <section>
-        <img src="pics/man.jpg">
+        <a href="file:///Users/collinbetori/Documents/Dev/web-workbook/01week/resume/index.html">
+            <img class="jim" src="pics/man.jpg">
+        </a>
     </section>
     <section>
         <p>
@@ -31,5 +33,11 @@
             has held Board Observer roles at Excite and MissileLock. 
         </p>
     </section>
+    <footer>
+    <a href="https://www.linkedin.com/in/collinbetori/">
+        <img class="logo" src="pics/log.png">
+        <- Click here to find my LinkedIn
+    </a>
+    </footer>
 </body>
 </html>
