--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <title></title>
     <link rel="stylesheet" href= "css/style.css">
 </head>
 <body> 
@@ -14,28 +9,24 @@
     <nav></nav>
     <main>
         <section>
-                <h1>Jameson Dettle
+                <h1> <img src="36.jpg" style="width:124.2px;height:165.4px;">
+                    <br>Jameson Dettle
                 </h1>
-                <img src="36.jpg">
         </section>
         <section>
-                <h1>About Jameson</h1>
-                <p>
-                        As the CEO of MetricStream, Shellye Archambeau is responsible for running all facets of the business.
-                        Shellye has a proven executive management track record and over 20 years of experience driving sales
-                        growth in the technology industry. Prior to joining MetricStream, Shellye was Chief Marketing Officer and
-                        Executive Vice President of Sales for Loudcloud, Inc, responsible for all global sales and marketing
-                        activities. At Loudcloud she led the transformation into an enterprise-focused company while growing sales
-                        50% year over year. Previously, she served as Chief Marketing Officer of NorthPoint Communications,
-                        where she led the design and implementation of all sales and marketing strategies. Shellye also served as
-                        President of Blockbuster, Inc.'s e-commerce division and was recognized by Internet World as one of the
-                        Top 25 'Click and Mortar' executives in the country in June of 2000. She spent the prior 15 years at IBM,
-                        holding several domestic and international executive positions. Shellye serves on the board of directors of
-                        Arbitron, Inc. and the Forum for Women Entrepreneurs and Executives. She earned a BS degree at the
-                        University of Pennsylvania, Wharton School of Business. 
+            <h1>About Me:</h1>
+            <article> <p> As the CEO of MetricStream, Shellye Archambeau is responsible for running all facets of the business.
+                    Shellye has a proven executive management track record and over 20 years of experience driving sales
+                    growth in the technology industry. Prior to joining MetricStream, Shellye was Chief Marketing Officer and
+                    Executive Vice President of Sales for Loudcloud, Inc, responsible for all global sales and marketing
+                    activities. At Loudcloud she led the transformation into an enterprise-focused company while growing sales
+                    50% year over year. Previously, she served as Chief Marketing Officer of NorthPoint Communications,
+                    where she led the design and implementation of all sales and marketing strategies. Shellye also served as
+                    President of Blockbuster, Inc.'s e-commerce division and was recognized by Internet World as one of the
+                    Top 25 'Click and Mortar' executives in the country in June of 2000. 
                 </p>
-        </section>
-        
+            </article>
+        </section>  
     </main>
     <aside>
         <div>   Craig Donato
