re-kajiggered CSS

--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -13,10 +13,9 @@
 </head>
 
 <body>
-
     <main>
         <div class="ceopic">
-            <a href="https://aaronaltounian.github.io/web-workbook/01week/resume/">
+            <a href="https://aaronaltounian.github.io/web-workbook/01week/resume/" target="_blank">
                 <img src="https://i.imgur.com/TLlbzqC.jpg" id="biopic">
             </a>
         </div>
@@ -25,23 +24,41 @@
             <header>
                 <h1>Aaron Altounian</h1>
                 <div class="links">
-                        <a href="http://www.linkedin.com/in/aaron-altounian" class="fa fa-linkedin"></a>
-                        <a href="http://www.facebook.com/aaron.altounian" class="fa fa-facebook"></a>
+                        <a href="http://www.linkedin.com/in/aaron-altounian" class="fa fa-linkedin" target="_blank"></a>
+                        <a href="http://www.facebook.com/aaron.altounian" class="fa fa-facebook" target="_blank"></a>
                         <a href="mailto:aaron.altounian@gmail.com" class="fa fa-envelope"></a>
-                        <a href="https://www.instagram.com/guitarmasutra/" class="fa fa-instagram"></a>
+                        <a href="https://www.instagram.com/guitarmasutra/" class="fa fa-instagram" target="blank"></a>
                     </div>
             </header>
         </div>
 
-        <section class="bio">
-            <p>
-                A dedicated, self-motivated, technically proficient sound and instrument technician with experience in music retail, instrument and sound system rentals and repairs, and venue sound and lighting system management.
-            </p>
-        </section>
+        <article>
+            <section class="bio">
+                <p>
+                    A dedicated, self-motivated, technically proficient sound 
+                    and instrument technician with experience in music retail, 
+                    instrument and sound system rentals and repairs, and venue 
+                    sound and lighting system management.
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                    Words words words words words words words words
+                </p>
+            </section>
+        <article>
     </main>
     
     <footer>
-        &copy; 2018 Aaron Altounian DBA Sound Guy Envy
+        &copy; 2018 Aaron Altounian DBA Sound Guy Envy. All Rights Reserved!
     </footer>
 </body>
 </html>
