--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -8,47 +8,58 @@
     <title>Bio</title>
 </head>
 <body>
-    <header>
-      <h1>Biography Page</h1>
-      <p>A page about myself</p>
-    </header>
-    <main>
-        <div class="paragraph">
-            <h1> Ceo Bios</h1>
-            <img width="50" src="https://randomuser.me/api/portraits/men/36.jpg";
-            <p> As the CEO of MetricStream, Shellye Archambeau is responsible for running all facets of the business.
-                Shellye has a proven executive management track record and over 20 years of experience driving sales
-                growth in the technology industry. Prior to joining MetricStream, Shellye was Chief Marketing Officer and
-                Executive Vice President of Sales for Loudcloud, Inc, responsible for all global sales and marketing
-                activities. At Loudcloud she led the transformation into an enterprise-focused company while growing sales
-                50% year over year. Previously, she served as Chief Marketing Officer of NorthPoint Communications,
-                where she led the design and implementation of all sales and marketing strategies. Shellye also served as
-                President of Blockbuster, Inc.'s e-commerce division and was recognized by Internet World as one of the
-                Top 25 'Click and Mortar' executives in the country in June of 2000. She spent the prior 15 years at IBM,
-                holding several domestic and international executive positions. Shellye serves on the board of directors of
-                Arbitron, Inc. and the Forum for Women Entrepreneurs and Executives. She earned a BS degree at the
-                University of Pennsylvania, Wharton School of Business. </p>
-            <p> Craig Donato is the co-founder and CEO of Oodle, a search engine for online classified listings. Prior to
-                Oodle, Craig was CEO of Grand Central Communications, an internet service for business-to-business
-                integration. Before joining Grand Central, Craig was a senior vice president at Excite@Home where he
-                oversaw the Excite Search and Community business units and managed Network Programming. Craig
-                holds an MBA from Stanford Graduate School of Business and a BS in Electrical Engineering from
-                Virginia Tech.
-            </p>
+    <header> 
+        <title>My Bio Page</title> 
+        <a href="file:///Users/andrewsommer/Desktop/web-workbookD/01week/resume/index.html"><img src="https://randomuser.me/api/portraits/men/36.jpg" alt="picture of jeff" class="image"></a>
+       <h1>Jim Valley</h1>     
+        <div class="Hbuttons">
+            <a href="https://www.linkedin.com/in/andrew-sommer/"><button>LinkedIn</button></a>
+            <a href="https://github.com/AndrewSommer89"><button>GitHub</button></a>
         </div>
-    <aside class="social">
+    </header>
+    <nav class="sidenav">
         <ul>
-            <li> hello</li>
-            <li>Twitter</li>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>LinkedIn</li>
-            <li> tets </li>
+            <a href="file:///Users/andrewsommer/Desktop/web-workbookD/02week/bio/index.html"><li>Bio</li></a>
+            <a href="file:///Users/andrewsommer/Desktop/web-workbookD/01week/resume/index.html"><li>Resume</li></a>
+            <a href="contact page"><li>Contact Info</li></a>
         </ul>
-    </aside>
+    </nav>
+    <main>
+        <section class="bio">
+            <p>Jim has held a number of high tech senior management positions in Silicon Valley over the past twenty
+                years. He is currently President, CEO and Chairman of PayCycle, the leader in on-line payroll for small
+                businesses. Prior to PayCycle, Jim was SVP for the Creative Professional Business Unit at Adobe Systems,
+                Inc. responsible for launching the Adobe Creative Suite. He joined Adobe from Fotiva, a photo
+                management software and services company which was purchased by Adobe in December, 2001, where he
+                was the president and CEO. He came to Fotiva via New Enterprise Associates (NEA) where he served as                    an executive-in-residence. Heeger had a long and successful career at Intuit, where he was most recently
+                 SVP and General Manager of Intuit’s Small Business Division. During his seven years at Intuit, he also
+                served as CFO, SVP of operations and customer service, and VP and General Manager of the checks and
+                forms business. Before joining Intuit, Jim held positions from product marketing engineer to distribution
+                manager during a ten-year career at Hewlett-Packard. He earned an MBA from Stanford Graduate School                    of Business in 1982 and a BS in management from MIT in 1978. Jim was a Board member of Fotiva and
+                has held Board Observer roles at Excite and MissileLock.<p>
+            <aside>
+                <h1> Facts About Me</h1>
+                <ul>
+                    <li>Interesting fact about self</li>
+                    <li>Interesting fact about self</li>
+                    <li>Interesting fact about self</li>
+                </ul>
+            </aside>
+                <p> Ken is co-founder and CEO of LucidEra, bringing more than seven years of executive experience with
+                leading software vendors to this On-Demand/Software-as-a-Service company. Previously, Ken created and
+                was VP and GM of Siebel's CRM OnDemand hosted business unit. Ken was also the VP and GM of
+                Siebel's flagship Sales Force Automation product line and VP of Marketing for Siebel Analytics. Ken was
+                previously SVP of Engineering and Products for Salesforce.com; Ken led all product development and                    product marketing functions for the company's first release of its groundbreaking, hosted CRM solution. He
+                was CEO and co-founder of Emergent Corporation, a consulting company focused on data warehousing
+                and Business Intelligence solutions, where he experienced first-hand the cost and complexity of building
+                on-premise analysis and reporting solutions. Previously, Ken was the Director of Oracle's Scalable Systems
+                Division, where he helped pioneer the use of highly parallel hardware and software technology in largescale                    data warehousing environments. He was a founding member of NetSuite's advisory board. Ken holds
+                a BS in computer science and electrical engineering from Harvard and an MBA from Stanford Graduate
+                School of Business
+                </p>
+        </section>
     </main>
-
-
-    
+    <footer>
+        <p>Copyright &copy; Andrewsommer 2018</p>
+    </footer>
 </body>
-</html>
