--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -12,27 +12,18 @@
   </head>
     <body>
         <header> 
-            <h1>Sam Nalgene Biography</h1>
-            <img src="https://scontent-nrt1-1.cdninstagram.com/vp/ac74f51fc4a0ddc8fbb715dd35253bf5/5C295721/t51.2885-15/e35/29092619_1429879723806930_1028901712594731008_n.jpg" alt="cat image">
-            <img src="https://cdn2.vectorstock.com/i/1000x1000/15/66/document-documents-file-folder-icon-vector-19401566.jpg" alt="folder image">
-            <img src="https://i.ebayimg.com/images/g/vykAAOSwv9FXg1U2/s-l640.jpg" alt="tennis racket image">
-        </header>
-            <div class="a">
-                <a href="mailto:samnalgene@hotmail.com">samnalgene@hotmail.com </a> 
-            </div>
-            <div class="a">
-                <a href="samanthanalgene.com">samnalgene.com</a> 
-            </div>
-           
+            <h1>Gwen Spertell Biography</h1>
+            <img src="images/lady.jpg" alt="lady image">
+            <img src="images/history.png" alt="clock icon">
+            <img src="images/basketball.png" alt="basketball icon">
+        </header>  
+        <br>
+        <br>    
         <main>
-            <h2> Professional History </h2>
-            <p>
-                 <span class="left">Liquid Engines <br> <i>CEO</i></span>
-                 <span class="right">Feb '10 to present</span>
-                
-            </p>
+            <h2>Hello World! I'm Gwen Spretell.</h2>
+            <h3> Professional History </h3>
             <br>
-            <p>Sam is an accomplished software executive with over 20 years experience in the software industry. Gwen
+            <p> Gwen is an accomplished software executive with over 20 years experience in the software industry. Gwen
                 is currently President and CEO of Liquid Engines, a corporate tax management and optimization software
                 company. Her previous executive positions include president and CEO of Intelligent Results, Inc. and COO
                 of BackWeb Technologies, Inc. Before joining BackWeb, Ms. Spertell spent eight years at Oracle
@@ -41,12 +32,28 @@
                 previously president and CEO of Pacific Western Information Systems, where she served as the key
                 architect for its flagship product, CompuTrust, a trust accounting application. Ms. Spertell earned her BA in
                 economics from Rutgers University. </p>
-            </main>
+        </main>
         <br>
         <section>
-            <h3> Personal History </h4>
-                <p> Tennis Player 
-                </p>
-        </section>   
+            <h4> Personal History </h4>
+            <p>Lorem ipsum dolor sit amet, commune offendit intellegebat sed id, et has minim mediocritatem.
+               Vix aeterno consequuntur eu, at ius affert utamur indoctum. Id nam legere quaerendum repudiandae, 
+               id nonumy inimicus suavitate vix. Cum populo interesset accommodare id, persecuti voluptatibus
+               ne nam. Ei paulo nonumy quidam eos. Pri no mundi choro.</p>
+        </section> 
+        <br>
+        <br>  
+        <br>
+        <footer>
+            <a href="https://en.wikipedia.org/wiki/LinkedIn">
+                  <img src="images/linkedin.png" alt="Linkedin logo">
+            </a>
+            <a href="https://en.wikipedia.org/wiki/Facebook">
+                <img src="images/facebook.png" alt="Facebook logo">
+            </a>
+            <a href="mailto:gwenspertell@hotmail.com">
+                <img src="images/email.png" alt="Envelope logo">
+            </a>
+        </footer>
     </body>
 </html>
