--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -12,7 +12,7 @@
         Jim Heeger
     </header>
     <section>
-        <a href="file:///Users/collinbetori/Documents/Dev/web-workbook/01week/resume/index.html">
+        <a href="file:///Users/collinbetori/Documents/Dev/web-workbook/01week/resume/index.html"></a>
             <img class="jim" src="pics/man.jpg">
         </a>
     </section>
