--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header>
-        <h1>Cris E. Smith</h1>
-        <img src="https://randomuser.me/api/portraits/women/36.jpg">
+        <h1>Cris Smith</h1>
+        <img src="profilePic2 copy.jpg">
         <p>Shellye has a proven executive management track record and over 20 years of experience driving sales
      for Loudcloud, Inc,Shellye has a proven executive management track record and over 20 years of experience driving sales
      growth in the technology industry. Shellye has a proven executive management track record and over 20 years of experience driving sales
      growth in the technology industry.  </p>
 
     <div style="clear: both"></div>
-    <nav> Link one. Link two. Link three. Link four. Link five .</nav></header>
+    <nav> Portfolio. Gallery. Contact. Resume.</nav></header>
     <div class="main">
     <h2>About Me</h2>
             Shellye has a proven executive management track record and over 20 years of experience driving sales
@@ -33,14 +33,10 @@
     <div class="footer">
     <h2>Factoids</h2>
     <p> As the CEO of MetricStream, Shellye Archambeau is responsible for running all facets of the business.
-            Shellye has a proven executive k record and over 20 years of experience driving sales
-            growth in the technology industry. Prior to joining MetricStream, Shellye was Chief Marketing Officer and
+            Shellye has a pro industry. Prior to joining MetricStream, Shellye was Chief Marketing Officer and
             Executive Vice President of 
             <p>Responsible for all global sales and marketing
-            activities. At Louutives in the country in June of 2000. She spent the prior 15 years at IBM,
-             holdi in June of 2000e prior 15 years at IBM,
-            holding several domestic and international executive positions. Shellye serves on the board of directors of
-            Arbitron, Inc. and the Forum for Women Entrepreneurs and Executives. She earned a BS degree at the
+            activities. Atm for Women Entrepreneurs and Executives. She earned a BS degree at the
             University of Pennsylvania, Wharton School of Business.  </p>
             </div>
 
