--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -13,7 +13,7 @@
         <h1>
             Jim Heeger
         </h1>
-        <p>
+        <p class="tagline">
             President, CEO and Chairman of PayCycle
         </p>
         <nav>
@@ -23,7 +23,7 @@
             Resume
         </nav>
     </header>
-    <br>
+    <section>
     <main>
         <img src="images/headshot.jpg" alt="Me">
         <h2 class="main">
@@ -43,6 +43,7 @@
             has held Board Observer roles at Excite and MissileLock. 
         </p>
     </main>
+</section>
     <footer>
         <p class="footer">
             Copyright Tyler Beck 2018
