--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -8,13 +8,29 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="header">
+        <a href="default" class= "logo"><img src="logo.jpg" alt="logo" class="pic"></a>
+        <div class= header right>
+    </div>
+
     <h1>V A P O R W A V E</h1>
     <img src="image.png" alt="album cover" class="center">
-    <p>Global capitalism is nearly there. At the end of the world there will only be liquid advertisement and gaseous desire. Sublimated from our bodies, our untethered senses will endlessly ride escalators through pristine artificial environments, more and less than human, drugged-up and drugged down, catalysed, consuming and consumed by a relentlessly rich economy of sensory information, valued by the pixel. The Virtual Plaza welcomes you, and you will welcome it too.</p>
-    <audio controls class="center">
-        <source src="ＤＲ. ＣＯＤＥＩＮＩ - The -r​-​Vaporwave Mixtape- Vol​.​2 - 09 CUL8R, G2B.mp3" type="audio/mpeg">
-            Your browser does not support this audio file
-    </audio>
+    <p style="border:3px; border-style:solid; border-color: #778899; padding: 1cm;">Global capitalism is nearly there. At the end of the world there will only be liquid advertisement and gaseous desire. Sublimated from our bodies, our untethered senses will endlessly ride escalators through pristine artificial environments, more and less than human, drugged-up and drugged down, catalysed, consuming and consumed by a relentlessly rich economy of sensory information, valued by the pixel. The Virtual Plaza welcomes you, and you will welcome it too.</p>
+    <div class="boxed">
+        <audio controls="controls" class="center">
+            <source src="ＤＲ. ＣＯＤＥＩＮＩ - The -r​-​Vaporwave Mixtape- Vol​.​2 - 09 CUL8R, G2B.mp3" type="audio/mpeg">
+                Your browser does not support this audio element
+        </audio>
+        <div class="container">
+            <div class="player">
+
+            </div>
+            <div class= "player-top">
+                <img src="vaporwave album.jpg" alt=cover class="art">
+
+            </div>
+    
+        </div>
 
 </body>
 </html>
