--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -1,19 +1,33 @@
-<!doctype <!DOCTYPE html>
+<!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Bio Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
-    <script src="main.js"></script>
+    <script src="CEO bio"></script>
 </head>
 <body>
-    <div class="background">
+
+    <div class="Name-header">
         <p> 
-             <h1> Name here </h1> 
+             <h1> Takashi Murakami </h1> 
         </p>
     </div>
+
+    <div class="top-section">
+            <h2> Takashi Murakami (村上 隆 Murakami Takashi, born February 1, 1962) is a Japanese contemporary artist. He works in fine arts media (such as painting and sculpture) as well as commercial 
+               media (such as fashion, merchandise, and animation) and is known for blurring the line between high and low arts. He coined the term "superflat", which describes both the aesthetic 
+               characteristics of the Japanese artistic tradition and the nature of post-war Japanese culture and society, and is also used for Murakami's own artistic style and that of other Japanese artists he has influenced.
+           </h2>
+    </div>
+    
+   <div class="pro-pic">
+       
+    here
+
+   </div>
 
 </body>
 </html>
