--- a/02week/bio/contact.html
+++ b/02week/bio/contact.html
@@ -11,11 +11,11 @@
 <h1>Contact Page</h1>
 
 		<nav class="navbar navbar-light mx-auto">
-<!-- style="background-color: #D4E6F1;"> -->
-			 <a class="navbar-brand" href="index.html">Home</a>
-			 <a class="navbar-brand" href="#">Resume</a>
+			 <a class="navbar-brand" href="../../index.html">Home</a>
+			 <a class="navbar-brand" href="index.html">Bio</a>
+			 <a class="navbar-brand" href="../../01week/resume/index.html">Resume</a>
 			 <a class="navbar-brand" href="photos.html">Photos</a>
-			 <a class="navbar-brand" href="#">Contact</a>
+			 <a class="navbar-brand" href="contact.html">Contact</a>
 		</nav>
 	
 
