--- a/02week/bio/photos.html
+++ b/02week/bio/photos.html
@@ -11,11 +11,11 @@
 <body>
 
 		<nav class="navbar navbar-light mx-auto">
-			 <a class="navbar-brand" href="index.html">Home</a>
-			 <a class="navbar-brand" href="index.html">Bio</a>
-			 <a class="navbar-brand" href="#">Resume</a>
+			 <a class="navbar-brand" href="../../index.html">Home</a>
+			 <a class="navbar-brand" href="../../02week/bio/index.html">Bio</a>
+			 <a class="navbar-brand" href="../../01week/resume/index.html">Resume</a>
 			 <a class="navbar-brand" href="photos.html">Photos</a>
-			 <a class="navbar-brand" href="#">Contact</a>
+			 <a class="navbar-brand" href="contact.html">Contact</a>
 		</nav>
 	
 
