--- a/lynn-portfolio/bio.html
+++ b/lynn-portfolio/bio.html
@@ -4,7 +4,7 @@
  <title>Lynn Wise | Bio</title>
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="background: black">
+<body style="background: white">
     <header>
     <div class="nav">
             <a href="./blog-portfolio.html">Projects</a>
@@ -13,9 +13,9 @@
             <a href="">Contact</a>
     </div>
     </header>
-    <hr class="whitefade">
+    <hr class="blackfade">
     <div class="homepage">
-        <h1><a href="./blog-portfolio.html" style="color: whitesmoke">Lynn Wise</a></h1>
+        <h1><a href="./blog-portfolio.html" style="color: gray">Lynn Wise</a></h1>
         <h1 style="font-size: 20px;"><a href="">WRITER & DIGITAL PUBLISHING SPECIALIST</a></h1>
     </div>
 </body>
