--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,7 +13,7 @@
         <title>My Bio Page</title> 
         <a href="file:///Users/andrewsommer/Desktop/jsdev/web-workbook/01week/resume/index.html"><img src="https://randomuser.me/api/portraits/men/36.jpg" alt="picture of jeff" class="image"></a>
        <h1>Jim Valley</h1>     
-        <div class="Hbuttons">
+        <div class="head-buttons">
             <a href="https://www.linkedin.com/in/andrew-sommer/"><button>LinkedIn</button></a>
             <a href="https://github.com/AndrewSommer89"><button>GitHub</button></a>
         </div>
@@ -48,7 +49,7 @@
                 forms business. Before joining Intuit, Jim held positions from product marketing engineer to distribution
                 manager during a ten-year career at Hewlett-Packard. He earned an MBA from Stanford Graduate School                    of Business in 1982 and a BS in management from MIT in 1978. Jim was a Board member of Fotiva and
                 has held Board Observer roles at Excite and MissileLock.<p>
-                    
+
                 <p> Ken is co-founder and CEO of LucidEra, bringing more than seven years of executive experience with
                 leading software vendors to this On-Demand/Software-as-a-Service company. Previously, Ken created and
                 was VP and GM of Siebel's CRM OnDemand hosted business unit. Ken was also the VP and GM of
