--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -17,9 +17,10 @@
             <section>
                     <img class="bio-pic" src="images/shellye.jpg">
             </section>
-            <section><div class="boxed">
             
-                    <p>As the CEO of <span class="emphasis">MetricStream</span>, Shellye Archambeau is responsible for running all facets of the business.
+            <section>
+                <div class="boxed">
+                     <p>As the CEO of <span class="emphasis">MetricStream</span>, Shellye Archambeau is responsible for running all facets of the business.
                         Shellye has a proven executive management track record and over 20 years of experience driving sales
                         growth in the technology industry. Prior to joining <span class="emphasis">MetricStream</span>, Shellye was Chief Marketing Officer and
                         Executive Vice President of Sales for <span class="emphasis">Loudcloud Inc</span>, responsible for all global sales and marketing
@@ -31,7 +32,8 @@
                         holding several domestic and international executive positions. Shellye serves on the board of directors of
                         <span class="emphasis">Arbitron, Inc.</span> and the <span class="emphasis">Forum for Women Entrepreneurs and Executives</span>. She earned a BS degree at the
                         University of Pennsylvania, Wharton School of Business.</p>
-                </div></section>
+                </div>
+            </section>
         </main>
     
 
