--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>taylors bio</title>
+    <link href="https://fonts.googleapis.com/css?family=Charmonman" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" />
     
 </head>
@@ -18,7 +19,7 @@
                     <a href="/02week/bio/index.html" class="navlink">about</a>
                     </div>
                     <div class="four">
-                    <a href="/02week/blog/index.html" class="navlink">blog</a>
+                    <a href="/09week/customer-satisfaction/index.html" class="navlink">contact</a>
                     </div>    
             </nav>
     <header class="header">
