--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -19,7 +19,7 @@
         <header role="banner">
             <div class="title-container">
                 <div class="title">
-                    <img src="./Images/Michael-Snowden-Signature-1.png">
+                    <img id="me" src="./Images/Michael-Snowden-Signature-1.png">
                 </div>
             </div>
         </header>
