--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -1,4 +1,6 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
+
+
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,8 +11,10 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>My name is Jessica<h1>
+    <h1>My name is Jessica</h1>
    <div>
-        <p>Welcome to my page! where do i begin? I'm a developing web programmer, with much to learn. i have a passion to serve those who have a desire to achieve their aspirations. </p>
+        <p>Welcome to my page! where do i begin? I'm a developing web programmer, with much to learn. 
+            i have a passion to serve those who have a desire to achieve their aspirations.
+         </p>
     </body>
 </html>
