added a new background file

--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-
+<link rel= "stylesheet" href="../bio/images/about me.jpg"/>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -11,10 +10,12 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>My name is Jessica</h1>
+    <h1 class="header">My name is Jessica</h1>
    <div>
-        <p>Welcome to my page! where do i begin? I'm a developing web programmer, with much to learn. 
-            i have a passion to serve those who have a desire to achieve their aspirations.
+        <p class="abp">Welcome to my page! where do i begin? I'm a developing web programmer, with much to learn. 
+            i have a passion to serve those who have a desire to achieve their aspirations. Let me know
+            how i can help you!
          </p>
+    </div>
     </body>
 </html>
